tests/EtaX/EtaX.meth2/EtaX.meth2.00.check
// 2.13-base exitCode: 0   val t4a: () => Any = meth2     // eta-expansion, but lint warning
// 2.13-head exitCode: 0   val t4a: () => Any = meth2     // eta-expansion, but lint warning
// 2.13-new exitCode: 0   val t4a: () => Any = meth2     // eta-expansion, but lint warning
// 3.0-old exitCode: 0   val t4a: () => Any = meth2     // eta-expansion, but lint warning
// 3.0 exitCode: 0   val t4a: () => Any = meth2     // eta-expansion, but lint warning
// 3.1 exitCode: 1   val t4a: () => Any = meth2     // eta-expansion, but lint warning
-- Error: /d/shisa/target/tests/EtaX/EtaX.meth2/EtaX.meth2/EtaX.meth2.00.scala:6:23 
6 |  val t4a: () => Any = meth2     // eta-expansion, but lint warning
  |                       ^^^^^
  |                       The syntax `<function> _` is no longer supported;
  |                       you can use `(() => <function>())` instead
1 error found
